eigenes CSS Format für die Windpfeile definieren und verwenden

--- a/main.css
+++ b/main.css
@@ -66,3 +66,16 @@ footer nav {
     display: inline-block;
     transform: translate(-30%, -50%);
 }
+
+.aws-div-icon-wind span {
+    font-size: 3em;
+    font-weight: bold;
+    padding: 0.3em;
+    text-shadow:
+        -1px -1px 0 black,
+        -1px 1px 0 black,
+        1px -1px 0 black,
+        1px 1px 0 black;
+    display: inline-block;
+    transform: translate(-30%, -50%);
+}
